force-app/main/default/objects/MIP_Element__c/MIP_Element__c.object-meta.xml
<CustomObject>
    <description>SOX object - Used to create Partner Mutual Investment Plan Contract; set booking goals, set milestones, and request a Rubrik Funded Head count.</description>
    <label>MIP Element</label>
    <nameField>
        <displayFormat>ELE-{00000}</displayFormat>
        <label>Element ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MIP Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>