force-app/main/default/objects/MIP_Element__c/fields/Actual_Bookings_ROI__c.field-meta.xml
<CustomField>
    <fullName>Actual_Bookings_ROI__c</fullName>
    <formula>CASE(Bookings_Tier_Attained__c,
&apos;Baseline&apos;, Baseline_Bookings_Incremental_Growth__c / Max_Bookings_Payout__c ,
&apos;Tier 1&apos;,  Tier_1_Bookings_Incremental_Growth__c / Max_Bookings_Payout__c ,
&apos;Tier 2&apos;, Tier_2_Bookings_Incremental_Growth__c / Max_Bookings_Payout__c ,
&apos;Tier 3&apos;, Tier_3_Bookings_Incremental_Growth__c / Max_Bookings_Payout__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Bookings ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>