force-app/main/default/objects/MIP_Element__c/fields/Actual_Funded_Head_Payout__c.field-meta.xml
<CustomField>
    <fullName>Actual_Funded_Head_Payout__c</fullName>
    <formula>IF(AND(ISPICKVAL(Payout_Type__c,&apos;All or Nothing&apos;), Milestones_Completed__c), Max_Funded_Head_Payout__c ,  IF(ISPICKVAL(Payout_Type__c,&apos;Partial&apos;),Max_Funded_Head_Payout__c  *  Funded_Head_Partial__c , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Funded Head Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>