force-app/main/default/objects/MIP_Element__c/fields/Baseline_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Bookings__c</fullName>
    <formula>Prior_Year_Bookings_ACV__c * (1 + Baseline_Bookings_Expected_Growth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>