force-app/main/default/objects/MIP_Element__c/fields/Baseline_Bookings_Rebate_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Bookings_Rebate_Distribution__c</fullName>
    <label>Baseline Bookings Rebate Payout Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>