force-app/main/default/objects/MIP_Element__c/fields/Baseline_Bookings_Rebate_Payout__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Bookings_Rebate_Payout__c</fullName>
    <formula>Baseline_Bookings_Rebate_Distribution__c *  Baseline_Bookings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Bookings Rebate Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>