force-app/main/default/objects/MIP_Element__c/fields/Bookings_Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Last_Sync_Date__c</fullName>
    <label>Bookings Last Sync Date</label>
    <type>DateTime</type>
</CustomField>