force-app/main/default/objects/MIP_Element__c/fields/Bookings_Percent__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Percent__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Bookings %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>