force-app/main/default/objects/MIP_Element__c/fields/Bookings_Tier_Attained__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Tier_Attained__c</fullName>
    <formula>IF(Contract_Period_Bookings_ACV__c &lt;  Baseline_Bookings__c ,&apos;Baseline&apos;, 
    IF(AND(Contract_Period_Bookings_ACV__c &gt;= Baseline_Bookings__c,Contract_Period_Bookings_ACV__c &lt;  Tier_2_Bookings__c ),&apos;Tier 1&apos;, 
       IF(AND(Contract_Period_Bookings_ACV__c &gt;= Tier_2_Bookings__c ,Contract_Period_Bookings_ACV__c &lt;  Tier_3_Bookings__c),&apos;Tier 2&apos;, 
          IF(Contract_Period_Bookings_ACV__c &gt;= Tier_3_Bookings__c,&apos;Tier 3&apos;,&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings Tier Attained</label>
    <type>Text</type>
</CustomField>