force-app/main/default/objects/MIP_Element__c/fields/Completed_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Completed_Milestones__c</fullName>
    <label>Completed Milestones</label>
    <summaryFilterItems>
        <field>MIP_Milestone__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>MIP_Milestone__c.MIP_Element__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>