force-app/main/default/objects/MIP_Element__c/fields/Contract_Period_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period_Bookings__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Contract Period Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>