force-app/main/default/objects/MIP_Element__c/fields/Contract_Period_Bookings_ACV__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period_Bookings_ACV__c</fullName>
    <description>TCV Value will be populated for MIPs created in FY25H1 &amp;&amp; ACV Value will be populated for MIPs created after FY25H2</description>
    <inlineHelpText>TCV Value will be populated for MIPs created in FY25H1 and ACV Value will be populated for MIPs created after FY25H2</inlineHelpText>
    <label>Contract Period Bookings (ACV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>