force-app/main/default/objects/MIP_Element__c/fields/Element_Type__c.field-meta.xml
<CustomField>
    <fullName>Element_Type__c</fullName>
    <description>MIP Element Type - Partner Sourced Bookings, Total Bookings, Rebate Milestone, Funded Head, Enrollment</description>
    <label>Element Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSNL Bookings</fullName>
                <label>Partner Sourced Bookings</label>
            </value>
            <value>
                <fullName>Total Bookings</fullName>
            </value>
            <value>
                <fullName>Funded Head</fullName>
            </value>
            <value>
                <fullName>Rebate Milestone</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>