force-app/main/default/objects/MIP_Element__c/fields/Enrollment_Payout_Rate__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Payout_Rate__c</fullName>
    <label>Enrollment Payout Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>