force-app/main/default/objects/MIP_Element__c/fields/Funded_Head_Partial__c.field-meta.xml
<CustomField>
    <fullName>Funded_Head_Partial__c</fullName>
    <label>Partial Payout %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>