force-app/main/default/objects/MIP_Element__c/fields/Head_Count__c.field-meta.xml
<CustomField>
    <fullName>Head_Count__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Head Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>