force-app/main/default/objects/MIP_Element__c/fields/Max_Bookings_Payout__c.field-meta.xml
<CustomField>
    <fullName>Max_Bookings_Payout__c</fullName>
    <formula>Tier_3_Bookings_Rebate_Payout__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Bookings Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>