force-app/main/default/objects/MIP_Element__c/fields/Max_Bookings_ROI__c.field-meta.xml
<CustomField>
    <fullName>Max_Bookings_ROI__c</fullName>
    <formula>Tier_3_Bookings_Incremental_Growth__c  /  Max_Bookings_Payout__c</formula>
    <label>Max Bookings ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>