force-app/main/default/objects/MIP_Element__c/fields/Max_Enrollment_Payout__c.field-meta.xml
<CustomField>
    <fullName>Max_Enrollment_Payout__c</fullName>
    <label>Max Enrollment Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>