force-app/main/default/objects/MIP_Element__c/fields/Max_Funded_Head_Payout__c.field-meta.xml
<CustomField>
    <fullName>Max_Funded_Head_Payout__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Max Funded Head Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>