force-app/main/default/objects/MIP_Element__c/fields/Max_Milestone_Payout__c.field-meta.xml
<CustomField>
    <fullName>Max_Milestone_Payout__c</fullName>
    <label>Max Milestone Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>