force-app/main/default/objects/MIP_Element__c/fields/Milestones_Completed__c.field-meta.xml
<CustomField>
    <fullName>Milestones_Completed__c</fullName>
    <formula>Total_Milestones__c  =  Completed_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestones Completed?</label>
    <type>Checkbox</type>
</CustomField>