force-app/main/default/objects/MIP_Element__c/fields/MIP_Contract__c.field-meta.xml
<CustomField>
    <fullName>MIP_Contract__c</fullName>
    <label>MIP Contract</label>
    <referenceTo>MIP_Contract__c</referenceTo>
    <relationshipLabel>MIP Elements</relationshipLabel>
    <relationshipName>MIP_Elements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>