force-app/main/default/objects/MIP_Element__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MIP Elements</relationshipLabel>
    <relationshipName>MIP_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>