force-app/main/default/objects/MIP_Element__c/fields/Payout_Type__c.field-meta.xml
<CustomField>
    <fullName>Payout_Type__c</fullName>
    <label>Payout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All or Nothing</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>