force-app/main/default/objects/MIP_Element__c/fields/Prior_Year_Bookings_ACV__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Bookings_ACV__c</fullName>
    <description>Values will be populated for MIP created after FY25H2</description>
    <label>Prior Year Bookings (ACV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>