force-app/main/default/objects/MIP_Element__c/fields/Prior_Year_Bookings_TCV__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Bookings_TCV__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Prior Year Bookings (TCV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>