force-app/main/default/objects/MIP_Element__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <length>100</length>
    <type>Text</type>
</CustomField>