force-app/main/default/objects/MIP_Element__c/fields/Tier_1_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Bookings__c</fullName>
    <formula>Prior_Year_Bookings_ACV__c * (1 + Tier_1_Bookings_Expected_Growth__c)</formula>
    <label>Tier 1 Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>