force-app/main/default/objects/MIP_Element__c/fields/Tier_1_Bookings_Rebate_Payout__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Bookings_Rebate_Payout__c</fullName>
    <formula>Tier_1_Bookings_Rebate_Distribution__c *  Tier_1_Bookings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier 1 Bookings Rebate Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>