force-app/main/default/objects/MIP_Element__c/fields/Tier_2_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Bookings__c</fullName>
    <formula>Prior_Year_Bookings_ACV__c * (1 + Tier_2_Bookings_Expected_Growth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier 2 Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>