force-app/main/default/objects/MIP_Element__c/fields/Tier_2_Bookings_Rebate_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Bookings_Rebate_Distribution__c</fullName>
    <label>Tier 2 Bookings Rebate Payout Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>