force-app/main/default/objects/MIP_Element__c/fields/Tier_3_Bookings_Expected_Growth__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Bookings_Expected_Growth__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Tier 3 Bookings Expected Growth %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>