force-app/main/default/objects/MIP_Element__c/fields/Tier_3_Bookings_Rebate_Payout__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Bookings_Rebate_Payout__c</fullName>
    <formula>Tier_3_Bookings_Rebate_Distribution__c  *  Tier_3_Bookings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier 3 Bookings Rebate Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>