force-app/main/default/objects/MIP_Element__c/fields/Total_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Total_Milestones__c</fullName>
    <label>Total Milestones</label>
    <summaryForeignKey>MIP_Milestone__c.MIP_Element__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>