force-app/main/default/objects/MIP_Element__c/recordTypes/Bookings_Element.recordType-meta.xml
<RecordType>
    <fullName>Bookings_Element</fullName>
    <active>true</active>
    <description>Rebate Partner Sourced Bookings or Rebate Total Bookings</description>
    <label>Bookings Element</label>
</RecordType>