force-app/main/default/objects/MIP_Element__c/recordTypes/Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Enrollment</fullName>
    <active>true</active>
    <description>Enrollment Element</description>
    <label>Enrollment</label>
</RecordType>