force-app/main/default/objects/MIP_Element__c/recordTypes/Funded_Head_Element.recordType-meta.xml
<RecordType>
    <fullName>Funded_Head_Element</fullName>
    <active>true</active>
    <description>Funded Head Element</description>
    <label>Funded Head</label>
</RecordType>