force-app/main/default/objects/MIP_Element__c/recordTypes/Rebate_Milestone.recordType-meta.xml
<RecordType>
    <fullName>Rebate_Milestone</fullName>
    <active>true</active>
    <description>Rebate Milestone Element</description>
    <label>Rebate Milestone</label>
</RecordType>