force-app/main/default/objects/MIP_Element__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Element_Type__c</columns>
    <columns>MIP_Contract__c</columns>
    <columns>Bookings_Tier_Attained__c</columns>
    <columns>Actual_Bookings_Payout__c</columns>
    <columns>Actual_Funded_Head_Payout__c</columns>
    <columns>Actual_Milestone_Payout__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>